# pam-apparmor-ingroup

./: .gitattributes  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  pam_apparmor_ingroup.c
